--- a/src/pug/comps/components.pug
+++ b/src/pug/comps/components.pug
@@ -2,9 +2,20 @@
 mixin banner(path)
 	div.banner-container
 		div.bannerBox.PS(data-speed=.5 data-distance=50)
-			div.banner(style=`background-image:url(${path})`)
-		div.txt
-			img(src="./images/main-txt.svg" loading='lazy')
+			div.banner.loading(style=`background-image:url(${path})` loading='lazy'  data-loading=`${path}`)
+		div.txt 
+			img(src="./images/main-txt.svg" loading='lazy') 
+ 
+mixin sub-banner(path, title) 
+	div.banner-container.sub 
+		div.bannerBox.PS(data-speed=.5 data-distance=50) 
+			div.banner.loading(style=`background-image:url(${path})`  loading='lazy' data-loading=`${path}`)
+		div.textBox
+			div.title=title
+
+mixin thumb(txt)
+	div.thumbBox
+		div.thumb=txt
               
 //-選單列表(顯示頁面)
 mixin nav(page)
@@ -19,10 +30,10 @@ mixin title(main, sub)
 //-預約流程
 mixin process()
 	div.rpBox
-		div.rpCard 
+		div.rpCard
 			div
 				img(src='./images/rp-icon-1.png')
-			div.tilte 預約諮商
+			div.title 預約諮商
 			div.txt 
 				ul
 					li 線上填寫預約表單
@@ -30,7 +41,7 @@ mixin process()
 		div.rpCard
 			div
 				img(src='./images/rp-icon-2.png')
-			div.tilte 初談評估
+			div.title 初談評估
 			div.txt 
 				ul
 					li 了解－來談議題與期待需求
@@ -39,7 +50,7 @@ mixin process()
 		div.rpCard
 			div
 				img(src='./images/rp-icon-3.png')
-			div.tilte 媒合心理師
+			div.title 媒合心理師
 			div.txt 
 				ul
 					li 安排合適心理師
@@ -47,7 +58,7 @@ mixin process()
 		div.rpCard
 			div
 				img(src='./images/rp-icon-4.png')
-			div.tilte 開始諮商
+			div.title 開始諮商
 			div.txt 
 				ul
 					li 開始心設計諮商旅程。
@@ -55,7 +66,7 @@ mixin process()
 //-專業團隊
 mixin team()
 	div.teamBox
-		a.member(href="./member.html")
+		a.member(href="./team-member.html")
 			div.pic
 				img(src='./images/何維峰.jpg') 
 			div.title
@@ -78,7 +89,7 @@ mixin team()
 				br 
 				| 一份有溫度，如實的幸福。
 			
-		a.member(href="./member.html")
+		a.member(href="./team-member.html")
 			div.pic
 				img(src='./images/金辰卉.jpg') 
 			div.title 
@@ -97,7 +108,7 @@ mixin team()
 				br
 				| 只是需要陪伴著細心尋找，耐心等待。
 
-		a.member(href="./member.html")
+		a.member(href="./team-member.html")
 			div.pic
 				img(src='./images/黃種斌.jpg') 
 			div.title 
@@ -116,7 +127,7 @@ mixin team()
 				br
 				| 若你願意，期待能與你一起同行。
 
-		a.member(href="./member.html")
+		a.member(href="./team-member.html")
 			div.pic
 				img(src='./images/woman.svg') 
 			div.title 
@@ -124,7 +135,7 @@ mixin team()
 				span.sub 諮商心理師
 			div.txt 
 
-		a.member(href="./member.html")
+		a.member(href="./team-member.html")
 			div.pic
 				img(src='./images/陳奕維.jpg') 
 			div.title 
@@ -132,7 +143,7 @@ mixin team()
 				span.sub 諮商心理師
 			div.txt 我相信每個人成長的路上，都是用自己的經驗，慢慢長成現在的樣子，這些都沒有問題也沒有對錯，都是自己面對這環境最適合的樣子，希望有幸能走進你的世界，一起陪你走一趟生命之旅。
 
-		a.member(href="./member.html")
+		a.member(href="./team-member.html")
 			div.pic
 				img(src='./images/邱盈潔.jpg') 
 			div.title 
@@ -147,15 +158,18 @@ mixin team()
 				br
 				| 邀請今天的你一起思考與感受。
 
-		div.bFooter
-			a.btn(href="./team.html") 更多介紹
+	div.prev(data-ctrl='prev') 
+		img(src="./images/arrow.svg")
+	div.next(data-ctrl='next') 
+		img(src="./images/arrow.svg")
+	
 
 //-文章專欄
 mixin column(num)
 	div.columnBox
 		- var n = 0;
 		while n < num
-			div.column(data-loop=n++)
+			article.columnItem(data-loop=n++)
 				div.left
 					div.pic
 						img(src="./images/column-1.jpg")
@@ -163,21 +177,38 @@ mixin column(num)
 					div.date 2023-01-01
 					div.title 文章標題
 					div.txtBox 
-						p.txt 文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容
+						p.txt 文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容文章內容
 					div
-						a.more(href="") 繼續閱讀
-		
+						a.more(href="./column-detail.html") 繼續閱讀
+
+				
 //-聯絡我們
 mixin contactus()
 	div.contactBox
 		div.left
-			iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3617.3328508850177!2d121.20071001535986!3d24.95478764761548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823ba4dfff231%3A0xa7cf1af4fbdf5826!2zMzI05qGD5ZyS5biC5bmz6Y6u5Y2A5paH5YyW6KGXNjbomZ8!5e0!3m2!1szh-TW!2stw!4v1673100675135!5m2!1szh-TW!2stw' width='600' height='450' style='border:0;' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade')
+			div.mapBox
+				iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3617.3328508850177!2d121.20071001535986!3d24.95478764761548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823ba4dfff231%3A0xa7cf1af4fbdf5826!2zMzI05qGD5ZyS5biC5bmz6Y6u5Y2A5paH5YyW6KGXNjbomZ8!5e0!3m2!1szh-TW!2stw!4v1673100675135!5m2!1szh-TW!2stw' allowfullscreen='' loading='lazy' referrerpolicy='no-referrer-when-downgrade')
 		div.right
-			p ｜上班時間：週一至週五 09:00-21:00
-			p 週六 0900-21:00
-			p ｜聯絡電話：03-4013311
-			p ｜Email：wdcc4013311@gmail.com
-			p ｜官方LINE@ ID： @065ewuqz 
-			p ｜諮商所地址： 桃園市平鎮區文化街66-1號
-			p 諮商所地址：桃園市平鎮區文化街66-1號（鄰近中壢/新屋交流道1分鐘車程，文化國小商圈）
-			p 鄰近停車場：文化公園地下停車場（一小時收費 30 元）
+			div.box
+				div.row
+					div.label ｜上班時間
+					div.txt 週一至週五 09:00-21:00
+						br
+						| 週六 0900-21:00
+				div.row
+					div.label ｜聯絡電話
+					div.txt 03-4013311
+				div.row
+					div.label ｜Email
+					div.txt wdcc4013311@gmail.com
+				div.row
+					div.label ｜官方LINE@ ID
+					div.txt @065ewuqz 
+				div.row
+					div.label ｜諮商所地址
+					div.txt 桃園市平鎮區文化街66-1號
+						br
+						| （鄰近中壢/新屋交流道1分鐘車程，文化國小商圈）
+				div.row
+					div.label ｜鄰近停車場
+					div.txt 文化公園地下停車場（一小時收費 30 元）
