--- a/src/pug/comps/footer.pug
+++ b/src/pug/comps/footer.pug
@@ -13,9 +13,9 @@ div.footer-container
     div.box.b3
         div.title 社群媒體
         div 
-            a(href="https://facebook.com")
+            a(href="https://lin.ee/qllzpsF" target='_black')
                 img.icon(src='./images/icon-line-w.svg')
-            a(href="https://facebook.com")
-                img.icon(src='./images/icon-fb-w.svg')
+            a(href="https://www.facebook.com/profile.php?id=100088215491511" target='_black')
+                img.icon(src='./images/icon-fb-w.svg' )
     
 footer Copyright © 2023 Wonderful Design Counseling Center All rights reserved.
