--- a/src/sass/pages/contactus.sass
+++ b/src/sass/pages/contactus.sass
@@ -1,4 +1,82 @@
 //@use "sass:math"
 @mixin contactus()
-    color: $fontColor
-    font-size: 24px
+    .contactBox
+        color: $fontColor
+        font-size: 24px
+        @include xxxl
+            font-size: 18px
+        @include sm
+            font-size: 15px
+        display: flex
+        width: 100%
+        max-width: 1600px
+        margin: 0 auto
+        .left
+            width: 100%
+            display: flex
+            justify-content: center
+            .mapBox
+                position: relative
+                overflow: hidden
+                
+                width: 100%
+                max-width: 640px
+                padding-top: 70%
+                
+                iframe
+                    border: none
+                    position: absolute
+                    top: 0
+                    left: 0
+                    bottom: 0
+                    right: 0
+                    width: 100%
+                    height: 100%
+        .right
+            width: calc(100% - 64px)
+            padding: 0 0 64px 0
+            
+            @include md
+                width: 100%
+            
+            .box
+                margin: 0 
+                @include xl
+                    width: fit-content
+                    margin: 0 auto
+                .row
+                    display: flex
+                    margin-bottom: 16px
+                    .label
+                        flex:0 0 220px
+                        @include xxxl
+                            flex:0 0 150px
+                        @include md
+                            flex:0 0 160px
+                        @include sm
+                            flex:0 0 130px
+                        position: relative
+                        &::after
+                            content:"："
+                            position: absolute
+                            right:0
+                
+                    
+        @include xl
+            align-items: center
+            flex-direction: column-reverse
+    
+    .contactus
+        .contactBox
+            max-width: 1300px
+            width: calc(100% - 128px)
+            padding: 64px
+            @include lg
+                width: 100%
+                padding: 64px 0
+            align-items: flex-start
+            flex-direction: column-reverse
+            .left .mapBox 
+                max-width: 100%
+
+            
