--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -6,5 +6,23 @@ html
     body
         div.main-container            
             +nav('about')
-            div.page-index
-                include ./comps/banner.pug
+            +thumb('首頁 > 關於心設計')
+            div.page-box.about
+                +sub-banner('./images/banner-about.jpg','關於心設計')
+
+                div.block
+                    div.intro 
+                        p 說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字。說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字。說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字。
+                div.block.y1
+                    div.envContainer
+                        - var n = 0;
+                        while n < 6
+                            div.envBox(data-loop=n++)
+                                div.env
+                                    img.preload.pop-btn(src="./images/env-s.jpg", loading="lazy" rel="preload", data-popsrc="./images/env-l.jpg")
+                                    div.title 標題說明
+                                    p.txt 文章說明
+            include ./comps/footer.pug 
+            include ./comps/pop.pug 
+
+                                            
