--- a/src/sass/comps/banner.sass
+++ b/src/sass/comps/banner.sass
@@ -2,17 +2,42 @@
 @mixin banner()
     div.banner-container
         width: 100%
-        //max-width: 1600px
         height:750px
+        @include xxxl  
+            height:600px
+        @include lg  
+            height:400px
+
+        &.sub
+            display: flex
+            justify-content: center
+            align-items: center         
+            height:540px
+            @include xxxl  
+                height:440px
+            
+            @include lg  
+                height:250px
+            &::after
+                z-index: 1
+                content: ''
+                position: absolute
+                width: 100%
+                height: 100%
+                background: rgb(0,0,0)
+                background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%)                
+
         position: relative
         background-color: rgba(128, 44 , 44, 1 )
         overflow: hidden
+
         div.bannerBox
             width: 100%
             height: 100%
             display: flex
             justify-content: center
             align-items: flex-start
+            z-index: 1
             &.PS
                 transition: 1s
                 animation-timing-function: ease-in
@@ -30,20 +55,60 @@
                         opacity: 1
 
         .txt
+            display: flex
+            justify-content: flex-end
             border-top-right-radius: 34px
             border-bottom-right-radius: 34px
             background-color: rgba(128, 44 , 44, 0.54 )
             position: absolute
             top:300px
+            padding: 50px 90px
             width: 45%
             left:0
-            padding: 50px 90px
-        
-            
-
-            @media screen and (max-width:1400px) 
-                padding: 30px 20px 30px 50px
+            z-index: 2
+            @include xxxl
+                width: 40%
+                top:200px
+                padding: 30px 90px
                 img
-                    width: 90%
-                
-                    
+                    width: 60%
+            
+            @include xl
+                border-top-right-radius: 24px
+                border-bottom-right-radius: 24px
+                padding: 30px 50px
+                img
+                    width: 80%
+
+            @include lg  
+                top:200px
+                border-top-right-radius: 10px
+                border-bottom-right-radius: 10px
+                padding: 20px 50px
+                img
+                    width: 100%
+        .textBox
+            width: 100%
+            max-width: $maxWidth 
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            position: absolute
+            z-index: 2
+            .title
+                color: #fff
+                position: absolute
+                font-size: 70px
+                @include xxxl
+                    font-size: 52px
+                /*
+                    @include lg
+                        font-size: 64px
+                @include md
+                    font-size: 32px
+                font-weight: bolder
+                z-index: 1
+
+            
+        
