--- a/src/sass/pages/about.sass
+++ b/src/sass/pages/about.sass
@@ -1,3 +1,49 @@
 //@use "sass:math"
 @mixin about()
-    
+    .about
+        font-size: 24px
+        @include xxxl
+            font-size: 21px
+
+        .intro
+            width: 100%
+            max-width: 1200px
+            font-weight: 400
+            padding: 60px
+
+    .envContainer
+        width: calc(100% - 72px)
+        padding:36px
+        display: grid              
+        justify-content: center        
+        grid-template-columns:  680px 680px
+        @include lg
+            grid-template-columns: 100%
+            width: 100%
+            padding:0px
+
+        .envBox
+            width: 100%
+            display: flex
+            justify-content: center
+            .env
+                width: calc(100% - 48px)
+                max-width: 680px
+                display: flex
+                flex-direction: column
+                align-items: center
+                padding: 24px
+                margin: 12px
+                background-color: #fff
+                border: 1px solid #818181
+                border-radius: 16px
+                .title
+                    color:$mainColor
+                    font-size: 36px
+                    @include xxxl
+                        font-size: 24px
+                p
+                    margin: 0
+                img
+                    width: 100%
+                    max-width: 400px
