--- a/src/sass/pages/index.sass
+++ b/src/sass/pages/index.sass
@@ -1,51 +1,67 @@
-//@use "sass:math"
-@mixin processingLine()
-    content: url('./images/processing.svg')
-    position: absolute
-    width:210px
-    height: 76px
+
+    
 @mixin index()
-    .page-index
-        width: 100%
+    .index
         .blocktitle
             font-size: 50px
             padding:80px 0 
+            @include  xxxl
+                font-size: 38px
+            @include  md
+                font-size: 30px
+                padding:40px 0 
             display: flex
             flex-direction: column
             align-items: center
             .sub
+                white-space: nowrap
                 font-family: 'Lato', sans-serif
                 font-weight: 400
                 color: $mainColor
                 font-size: 24px
+                
+                @include  xxxl
+                    font-size: 18px
+                @include  md
+                    font-size: 15px
 
-        .newsBox
+    .newsBox
+        display: flex
+        flex-direction: column
+        align-items: center
+        width: 100%
+        .news
             display: flex
-            flex-direction: column
-            align-items: center
+            padding-bottom: 40px 
+            margin-bottom: 20px 
             width: 100%
-            .news
-                display: flex
-                padding-bottom: 40px 
-                margin-bottom: 20px 
-                width: 100%
-                max-width: 1400px
-                border-bottom: 3px dotted #eee
-                .time
-                    white-space: nowrap
-                    padding:0 60px
-                    font-size: 30px
-                    color: $mainColor
-                .txt
-                    font-weight: 300
+            max-width: 1400px
+            border-bottom: 3px dotted #eee
+            
+            .time
+                white-space: nowrap
+                padding:0 60px
+                @include lg
+                    padding:0 0 20px 0 
+                font-size: 30px
+                @include xxxl
                     font-size: 24px
-                    color: $fontColor
-                    line-height: 40px
+                color: $mainColor
+            .txt
+                font-weight: 300
+                font-size: 24px
+                line-height: 40px
+                @include xxxl
+                    font-size: 18px
+                    line-height: 32px
+                color: $fontColor
+            @include lg
+                flex-direction: column
+    
+    .contactBox
+        display: flex            
+        > div
+            flex: 0 0 50%
+                        
         
-        .contactBox
-            display: flex            
-            > div
-                flex: 0 0 50%
-                            
-            
-            
+        
