--- a/src/sass/pages/service.sass
+++ b/src/sass/pages/service.sass
@@ -1,10 +1,40 @@
 //@use "sass:math"
+@mixin processingLine()
+    content: ''
+    position: absolute
+    background-image: url('../images/processing.svg') 
+    background-repeat: no-repeat
+    width:210px
+    height: 76px
+    @include xl
+        background-image: url('../images/processing_m.svg') 
+        background-position: bottom center  
+        background-size: cover  
+        width:20px
+        height: 100px
+    z-index: -1
+
+
+    
 @mixin service()
     .rpBox
         display: flex
         justify-content: center
+        font-size: 21px
+        @include xxxl
+            font-size: 18px      
+        @include xl
+            width: 100%
+            flex-direction: column
+            align-items: center
+        @include md
+            font-size: 18px
+        
+
         .rpCard
-            height: 465px
+            width: 100%
+            max-width: 200px
+            height: 400px
             display: flex
             flex-direction: column
             justify-content: flex-start
@@ -13,19 +43,182 @@
             border: 2px solid #BEBEBE
             border-radius: 20px
             padding:28px
+            opacity: 0
+
+            @include md
+                padding:28px 16px
+                height: 300px
             margin: 0 28px
             position: relative
+            
+
+            .title
+                font-size: 30px
+                @include xxxl
+                    font-size: 24px
+                color: $mainColor
+                position: relative
+                margin-bottom: 10px
+                padding-bottom: 10px
+                &::after
+                    content:''
+                    position: absolute
+                    bottom: 0
+                    
+                    left: calc( 50% - 90%)
+                    height: 1px
+                    width: 180%
+                    background-color: $mainColor
+
+                    
+                
             &:nth-child(even)
                 margin-top: 120px
 
             &:nth-child(1)::before, &:nth-child(3)::before
-                @include  processingLine()
+                @include processingLine()
                 right: -58px
                 bottom: -76px
             
             &:nth-child(2)::before
-                @include  processingLine()
+                @include processingLine()
                 transform: scaleY(-1)
                 right: -58px
                 top: -76px
-    
+
+            @include xl
+                width: calc(100% - 56px)
+                max-width: 300px
+                margin-bottom: 100px
+                &:nth-child(even)
+                    margin-top: 0
+                &:nth-child(1)::before, &:nth-child(2)::before, &:nth-child(3)::before
+                    transform: scaleY(1)
+                    top: auto
+                    right: auto
+                    left: calc( 50% - 10px)
+                    top: 100%
+                    z-index: -1
+
+            img
+                max-width: 150px
+
+            .txt
+                width: 100%
+            ul
+                margin: 0
+                padding: 0
+                padding-left: 20px
+                li
+        
+        &.on
+            .rpCard
+                position: relative
+                animation-name: moveInHori
+                @include xl
+                    animation-name: moveInVerti
+                animation-fill-mode: forwards
+                animation-duration: 1s
+                @for $i from 1 through 4 
+                    &:nth-child( #{$i}) 
+                        animation-delay: #{.4 * $i}s
+                    
+                @keyframes moveInHori
+                    from
+                        opacity: 0
+                        transform: translateX(-100px)
+                    to
+                        opacity: 1
+                        transform: translateX(-0px)    
+               
+                @keyframes moveInVerti
+                    from
+                        opacity: 0
+                        transform: translateY(-100px)
+                    to
+                        opacity: 1
+                        transform: translateY(-0px)    
+    .service
+        .block.y1
+            padding-top:64px 
+                    
+                
+        .menuList
+            padding: 60px 0
+            width: 100%
+            max-width: $maxWidth
+            @include xxxl
+                max-width: 1200px
+
+            display: flex
+            flex-wrap: wrap
+            justify-content: center
+            .box
+                opacity: 0
+                flex: 0 0 calc(33.3%)
+                @include lg
+                    flex: 0 0 calc(50%)
+                @include md
+                    //flex: 0 0 calc(50% - 200px)
+                    flex: 0 0 calc(50% - 0px)                    
+                @include sm
+                    flex: 0 0 100%
+                    margin: 0
+                .circle
+                    position: relative
+                    border: 3px solid #BEBEBE
+                    border-radius: 50%
+                    width: calc(100% - 36px)
+                    margin: 18px
+                    padding-bottom: calc(100% - 36px)
+                .circle
+                    .content
+                        width: 100%
+                        height: 100%
+                        position: absolute
+                        display: flex
+                        justify-content: center
+                        align-items: center
+                        flex-direction: column
+                        text-align: center
+                        font-size: 24px
+
+                        @include xl
+                            font-size: 18px
+
+                        @include lg
+                            font-size: 18px
+
+                        @include md
+                            font-size: 15px
+
+                        h3
+                            color:$mainColor
+                            margin: 0
+                            font-size: 48px
+                            @include xxxl
+                                font-size: 36px
+                            @include xl
+                                font-size: 32px
+                            @include md
+                                font-size: 24px
+                        ul
+                            text-align: left
+                            li
+                                white-space: nowrap
+
+            &.on
+                .box
+                    animation-name: fade
+                    animation-fill-mode: forwards
+                    animation-duration: 1s
+                    @for $i from 1 through 5 
+                        &:nth-child( #{$i}) 
+                            animation-delay: #{.4 * $i}s
+                    
+                @keyframes fade
+                    from
+                        opacity: 0
+                    to
+                        opacity: 1    
+                    
