--- a/src/sass/pages/team.sass
+++ b/src/sass/pages/team.sass
@@ -2,44 +2,50 @@
 @mixin team()
     .team
         width: 100%
+        position: relative
+        .block.p100
+            padding-top: 100px
+    .prev, .next
+        display: none
+    .next
+        transform: scaleX(-1)
+
     .teamBox
         width: 100%
+        max-width: 1600px
         display: grid
         grid-template-columns: 1fr 1fr 1fr 
-        
+        @include lg           
+            grid-template-columns: 1fr 
         .member
             color: #42495B
-            padding: 0 24px 160px 24px
+            padding: 50px 24px 160px 24px
             width: calc(100% - 48px)
             justify-self: center
             display: flex
             flex-direction: column
             align-items: center
             text-decoration: none
+            @include lg
+                flex: 0 0 calc(100% - 48px)
+                
             
+            transition: background-color .4s , transform .4s 
             .pic
-                display: flex
-                justify-content: center
-                align-items: center
-                //width: 100%
-                //max-width: 250px
-                width: 250px
-                height: 250px
-                clip-path: circle(49% at 50% 50%)
-                margin-bottom: 36px
-                img
-                    transition:1s
-                    width: 100%
-                    height: 100%
-                    object-fit: cover
+                transition: .4s
             &:hover
+                background-color: #fcf5ed
                 .pic
-                    img
-                        width: 110%
-                        height: 110%
+                    transform: scale(1.1)
+                    /*
+                        img
+                            width: 110%
+                            height: 110%
             .title
                 width: 100%
                 font-size: 38px
+                @include xxxl
+                    font-size: 30px
                 font-weight: 300
                 justify-self: center
                 display: flex
@@ -49,13 +55,120 @@
                 padding-bottom: 24px
                 .sub
                     font-size: 24px
+                    @include xxxl
+                        font-size: 18px
 
             .txt
+                width: 100%
                 padding: 24px 0
                 text-align: center
                 font-weight: 300
                 font-size: 21px
                 line-height: 34px
-                border-bottom: 2px solid #E0E0E0
+                @include xxxl
+                    font-size: 18px
+                    line-height: 30px
 
-    
+                border-bottom: 2px solid #E0E0E0
+  
+    .teamBox .pic, .member-card .pic
+        display: flex
+        justify-content: center
+        align-items: center
+        //width: 100%
+        //max-width: 250px
+        width: 250px
+        height: 250px
+        @include xxxl
+            width: 200px
+            height: 200px
+
+        clip-path: circle(49% at 50% 50%)
+        margin-bottom: 36px
+        img
+            transition:1s
+            width: 100%
+            height: 100%
+            object-fit: cover
+    .index 
+        .prev, .next
+            @include lg
+                position: absolute
+                height: 1200px
+                display: flex
+                align-items: center
+                justify-content: space-between 
+        .prev
+            left: 10px
+        .next
+            right: 10px
+                
+        .teamBox
+            @include lg            
+                transition: .4s
+                display: flex
+                overflow-x: hidden
+                scroll-behavior: smooth
+
+    //team-member頁面
+    .team-member
+        padding-bottom: 160px
+        .member-card
+            margin-top: 120px
+            .head
+                display: flex
+                justify-content: center
+                align-items: center
+                @include lg
+                    flex-direction: column
+                .pic
+                    width: 300px
+                    height: 300px
+
+                .info
+                    padding: 54px
+                    @include lg
+                        text-align: center
+                    h2, h4
+                        font-weight: 400
+                        margin: 0
+                        padding: 0
+                    .name
+                        font-size: 60px
+                    .title
+                        font-size: 45px
+
+                    .sn
+                        color: $mainColor
+                        font-size: 40px
+            .row
+                color: #42495B
+                border-bottom: 1px solid #42495B
+                display: flex
+                font-size: 24px
+                padding: 40px 60px
+                width: calc(100% - 120px)
+                max-width: 1200px                
+                @include lg
+                    flex-direction: column
+                    padding: 40px 24px
+                    width: calc(100% - 48px)
+
+                &:last-child
+                    border-bottom: none
+                
+                ul,li,p
+                    margin: 0
+                    padding: 0
+                    list-style: none
+                li
+                    padding-bottom:20px 
+                .label
+                    flex: 0 0 250px
+                    @include lg
+                        flex: 0 0 80px
+                    font-size: 40px
+                    color: $mainColor
+                .content
+                    padding-top: 6px
+                    font-weight: 300
